# reality

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  plugins.cfg  plugins_d.cfg  plugins_windows.cfg  resources.cfg
Data/: camera.yml  db.xml  db_base_board.xml  db_o.xml  db_test.xml  demo_final.xml  solidity.xml
Data/boards/: board_1.yml
Utils/camCalib/: Source.cpp
assets/Model/blends/: SwanChair.blend  TV_Desk.blend
assets/Model/images/: mona_lisa_uvs.tif
assets/Model/mat/: Chair.material  Cyl.material  EarthGlobe.material  EiffelTower.material  FL1.material  FL2.material  LambdaPainting.material  Mona.material  OtherPainting.material  Pisa-Tower.material  Shield.material  Sphinx.material  Support.material  SwanChair.material  TV_Desk.material  WoodenChair.material  epitech.material  leaves.material  tapisserie.material  tronc.material  wall.material  wall_1.MESH.material
assets/Model/mesh/: EarthGlobe.mesh  EiffelTower.mesh.REMOVED.git-id  FL1.mesh  FL2.mesh  LambdaPainting.mesh  Mona.mesh  OtherPainting.mesh  Pisa-Tower.mesh.REMOVED.git-id  Shield.mesh  SwanChair.mesh  TV_desk.mesh  Tree.mesh  TvDesk.mesh  Wall.mesh  WoodenChair.mesh  epitech.mesh  tapisserie.mesh
assets/Oculus/: oculus.cg  oculus.material
assets/libRocket/: demo.rml
assets/mainUI/: mainui.rcss  mainui.rml  menutop.rml  window.rml
cmake/: FindARToolKit.cmake  FindAruco.cmake  FindLibRocket.cmake  FindOculusSDK.cmake
config/: plugins.cfg  plugins_d.cfg  resources.cfg  resources_d.cfg
inc/: ARManager.h  ARManager.hpp  AssetInfo.hpp  Core.hpp  Entity.hpp  Gui.hpp  Hexapat.hpp  IGlasses.hpp  IRenderer.hpp  Light.hpp  Logger.hpp  Object.hpp  Oculus.hpp  OgreRenderer.hpp  Overlay.hpp  SensorInput.hpp  Settings.hpp  StereoCamera.hh  StereoCamera.hpp  Utils.hpp  VirtualOculus.hpp  gui.hpp  logger.h
inc/ARma/: cameraparams.h  pattern.h  patterndetector.h
inc/libRocketOgre/: ExampleFrameListener.h  RenderInterfaceOgre3D.h  RocketFrameListener.h  SystemInterfaceOgre3D.h
src/: ARManager.cpp  ARManager_Motion.cpp  AssetInfo.cpp  Core.cpp  Entity.cpp  Gui.cpp  Hexapat.cpp  IGlasses.cpp  Light.cpp  Logger.cpp  Object.cpp  Oculus.cpp  OgreRenderer.cpp  Overlay.cpp  SensorInput.cpp  Settings.cpp  StereoCamera.cpp  Utils.cpp  VirtualOculus.cpp  logger.cpp  main.cpp
src/ARma/: pattern.cpp  patterndetector.cpp
src/libRocketOgre/: RenderInterfaceOgre3D.cpp  RocketFrameListener.cpp  SystemInterfaceOgre3D.cpp
stuff/: reanull.sh
test/: Core_test.cpp  Object_test.cpp  Ogre_test.cpp  StereoCamera_test.cpp  VirtualOculus_test.cpp  main_test.cpp
tmp_aruco/: aruco125.lib
